--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,29 +1,87 @@
+# =============================================================================
+# Tmux Configuration
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# General Settings
+# -----------------------------------------------------------------------------
+# Set true color and RGB capability
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-set -g base-index 1
 
+# Start windows and panes index at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Reduce escape time for faster response in vim
+set -sg escape-time 10
+
+# Enable mouse support
+set -g mouse on
+
+# Use vim key bindings
+set-window-option -g mode-keys vi
+
+# Keep tmux sessions on window close
+set -g detach-on-destroy off
+
+# -----------------------------------------------------------------------------
+# Key Bindings
+# -----------------------------------------------------------------------------
+# Change prefix to Ctrl-a
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-unbind %
-bind | split-window -h 
-
-unbind '"'
-bind - split-window -v
-
+# Reload tmux config with prefix + r
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
-bind j resize-pane -D 5
-bind k resize-pane -U 5
-bind l resize-pane -R 5
-bind h resize-pane -L 5
+# Better window splitting
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
 
-# sesh
+# Vim-like pane resizing
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+# Quick pane selection
+bind -r m resize-pane -Z
+bind-key x kill-pane
+
+# -----------------------------------------------------------------------------
+# Copy Mode Configuration
+# -----------------------------------------------------------------------------
+# Vim-like copy mode
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# -----------------------------------------------------------------------------
+# Status Bar & Theme Configuration
+# -----------------------------------------------------------------------------
+# Set status bar position
+set-option -g status-position top
+
+# Catppuccin theme configuration
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_session}"
+
+# -----------------------------------------------------------------------------
+# Session Management (Sesh Integration)
+# -----------------------------------------------------------------------------
 bind-key "O" run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 80%,70% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi \
+    --border-label ' sesh ' \
+    --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
@@ -33,61 +91,32 @@ bind-key "O" run-shell "sesh connect \"$(
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
     --preview-window 'right:55%' \
-    --preview 'sesh preview {}'
+    --preview 'sesh preview {}' \
 )\""
-bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
-set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
-bind -r m resize-pane -Z
+# -----------------------------------------------------------------------------
+# Plugin Configuration
+# -----------------------------------------------------------------------------
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'                  # Plugin manager
+set -g @plugin 'catppuccin/tmux#v2.1.3'            # Theme
+set -g @plugin 'christoomey/vim-tmux-navigator'    # Vim integration
+set -g @plugin 'tmux-plugins/tmux-sensible'        # Sensible defaults
+set -g @plugin 'tmux-plugins/tmux-resurrect'       # Session saving
+set -g @plugin 'tmux-plugins/tmux-continuum'       # Auto session save
 
-set -g mouse on
+# Plugin options
+set -g @resurrect-capture-pane-contents 'on'       # Save pane contents
+set -g @continuum-restore 'on'                     # Auto restore sessions
+set -g @tpm-clean 'u'                              # Clean plugins with prefix + u
 
-set-window-option -g mode-keys vi
-
-
-set-option -g status-position top
-# set-option -g status-style bg=default
-# set -g status-bg default
-
-set -g @catppuccin_window_status_style "rounded"
-
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
-
-# remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
-
-# To enable Yazi's image preview to work correctly in tmux
-set -g allow-passthrough on
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
-
-# tpm plugin
-set -g @plugin 'tmux-plugins/tpm'
-
-# list of tmux plugins
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'omerxx/tmux-floax'
-# set -g @plugin 'omerxx/tmux-sessionx' # used sesh instead
-
-set -g @catppuccin_window_text " #W"
-set -g @catppuccin_window_current_text " #W"
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_session}"
-
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
-
-set -g @tpm-clean 'u'
-
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# -----------------------------------------------------------------------------
+# Initialize TMUX plugin manager (keep this line at the very bottom)
+# -----------------------------------------------------------------------------
 run '~/.tmux/plugins/tpm/tpm'
 
+# Set transparent background
+# This needs to be at the bottom of the file too
 set -g status-style bg=default
+set -g status-bg default
 set -g popup-style bg=default
